# parallel

./: CMakeLists.txt  colab.ipynb  vector_add.ipynb
.devcontainer/: devcontainer.json
src/: main.cu
